fixed css styles in overview and main that were overlapping with mine

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -97,7 +97,7 @@ cite, em {
   ========================================
 */
 
-a {
+/* a {
   color: #648880;
   text-decoration: none;
 }
@@ -108,7 +108,7 @@ a:hover {
 
 p a {
   border-bottom: 1px solid #dfe2e5;
-}
+} */
 
 /*
   ========================================
